ajustes responsivos visão tablet

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span> R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ - Star+ - Combo+">
                     <button class="button">ASSINE AGORA</button>
                     <span> R$ 45,90/mês*</span>
                 </li>
@@ -222,9 +222,8 @@
         <h2 class="title">Perguntas frequentes</h2>
         <ul class="faq__questions">
             <li class="faq__questions__item">
-                <div class="faq__questions__item__question text" data-faq-question>
+                <div class="faq__questions__item__question text--small" data-faq-question>
                     O que está incluido no Disney+ e no Star+?
-                </div>
                 <div class="faq__questions__item__answer text--big">
                     <p class="text--big">O Disney+ oferece: </p>
                     <ul class="faq__questions__item__answer__list">
@@ -239,7 +238,7 @@
                 </div>
             </li>
             <li class="faq__questions__item">
-                <div class="faq__questions__item__question text" data-faq-question>
+                <div class="faq__questions__item__question text--small" data-faq-question>
                     Já tem Disney+ ou o Star+ e quer o Combo+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
@@ -256,7 +255,7 @@
                 </div>
             </li>
             <li class="faq__questions__item">
-                <div class="faq__questions__item__question text" data-faq-question>
+                <div class="faq__questions__item__question text--small" data-faq-question>
                     Quais plataformas de pagamento posso utilizar?
                 </div>
                 <div class="faq__questions__item__answer text--big">
@@ -264,7 +263,7 @@
                 </div>
             </li>
             <li class="faq__questions__item">
-                <div class="faq__questions__item__question text" data-faq-question>
+                <div class="faq__questions__item__question text--small" data-faq-question>
                     Como posso ver o conteúdo com classificação indicativa até 16 e 18?
                 </div>
                 <div class="faq__questions__item__answer text--big">
