mudanças no html para correção de bugs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header header--is-hidden">
         <div class="header__container">
             <h1 class="header__logo ">
                 <img src="./dist/images/disneyplus.svg" alt="">
@@ -313,7 +313,7 @@
             ® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
         </p>
         <p class="text--small">
-            Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam molestias minus unde illum delectus. Illo vel voluptates autem temporibus optio, tempora laboriosam architecto laborum sunt beatae, magnam consequatur in! Iure.tempora laboriosam architecto laborum sunt beatae, magnam consequatur in!
 
         </p>
         </div>
